--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<!--<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>Airhaoran.GitHub.io by Haoran Su</title>
@@ -54,4 +54,23 @@
 
   
   </body>
+</html>-->
+<html>
+<body class= "container">
+  <div id="search-box">
+    <p><a href="http://en.wikipedia.org/wiki/Special:Random" target="_blank" class="random">Click here to get a random article from Wiki</a></p>
+    </p>
+    <form action="#" id="search">
+    <input type="text" name="fname" id = "123" placeholder="Search by Wiki" class="in">
+      <!--<input type="submit" id ="mySub" >-->
+      <input type="button" onclick="myFunction()" class="mysearch button" value="search" id="searchB" ><br></br>
+    </form>
+    
+  </div>
+  <div id="try">
+
+  </div>
+  <div id="b">
+  </div>
+</body>
 </html>
