--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
   </body>
 </html>-->
 <html>
+   <head>
+    <meta charset="UTF-8">
+    <title>Airhaoran.GitHub.io by Airhaoran</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <!--<div class="fixed">
     <a href="#home">
