--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--<html lang="en-us">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>Airhaoran.GitHub.io by Airhaoran</title>
@@ -50,70 +50,5 @@
 
   
   </body>
-</html>-->
-<html>
-   <head>
-    
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-  <!--<div class="fixed">
-    <a href="#home">
-    <button class="btn btn-primary btn-lg" type ="buttom">Home
-      </button></a>
-    <a href="#about">
-    <button class="btn btn-primary btn-lg" type ="buttom ">About
-      </button></a>
-    <a href="#portfolio">
-    <button class="btn btn-primary btn-lg" type ="buttom">Protfolio
-      </button></a>
-    <a href="#contact">
-    <button class="btn btn-primary btn-lg" type ="buttom">Contact
-      </button></a>
-  </div>-->
-  <div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top bar">
-        <ul class="nav navbar-nav navbar-right">
-          <li type="text-primary"><a href="#home"><button  class="btn btn-primary btn-md ">Home</button></a></li>
-          <li><a href="#about"><button  class="btn btn-primary btn-md">About</button></a></li>
-          <li><a href="#portfolio"><button  class="btn btn-primary btn-md">Portfolio</button></a></li>
-          <li><a href="#contact"><button  class="btn btn-primary btn-md">Contact</button></a></li>
-      </nav>
-  </div>
-  <div class="bodyB1" id="home">
-    <h1 class="text-center title">Amazing First Portfolio</h1>
-    <h1 class="text-center subTitle">A Free Code Camp Project Portfolio</h1>
-    <h1 class="text-center name">By <a href="http://www.freecodecamp.com/airhaoran" target="_blank"><font color=(1,13,105)>Haoran Su</font></a> </h1>
-  </div>
-  <div class="bodyB2" id="about">
-    <div class="row">
-      <div class="col-md-6">
-        <img class="pic" src="https://avatars.githubusercontent.com/u/14958191?v=3">
-      </div>
-      <div class="col-md-6">
-        <h1 class="nameabout">Haoran Su (苏浩然)</h1>
-        <p class="about">I'am a rencent grads from Washington State University, obtained a Bachelor's degree in Electrical Engineering. I'am also self taught web designer with full passion of coding.</p>
-        <p class="about">Languages and Frameworks:</p>
-        <p class="about">C, Python, Java, HTML5, CSS3, jQuery, Bootstrap3.
-      </div>
-    </div>
-  </div>
-  <div class="bodyB3" id="portfolio">
-  </div>
-  <div class="bodyB4 " id="contact">
-    <p class="subTitle text-center">
-      airhaoran@gmail.com
-    </p>
-    <ul class="list-unstyled">
-      <li class="contactB"><a href="https://www.linkedin.com/in/haoran-su-b54867a3" target="_blank"><button class="btn btn-primary btn-lg btn-block "><i class="fa fa-linkedin"></i>  LinkedIn</button></a></li>
-      <li class="contactB"><a href="https://www.facebook.com/Airxiaosu" target="_blank"><button class="btn btn-primary btn-lg btn-block "><i class="fa fa-facebook"></i>  Facebook</button></a></li>
-      <li class="contactB"><a href="https://github.com/Airhaoran" target="_blank"><button class="btn btn-primary btn-lg btn-block "><i class="fa fa-github"></i>  Guthub</button></a></li>
-      <li class="contactB"><a href="http://www.freecodecamp.com/airhaoran" target="_blank"><button class="btn btn-primary btn-lg btn-block "><i class="fa fa-fire fa-fw"></i>  FreeCodeCamp</button></a></li>
-    </ul>
-  </div>
-
-</body>
 </html>
+
