--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <!--<div class="fixed">
