--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--<html lang="en-us">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>Airhaoran.GitHub.io by Airhaoran</title>
@@ -50,30 +50,17 @@
 
   
   </body>
-</html>-->
-<html>
+</html>
+<!--<html>
   <head>
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>-->
+  
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
-  <!--<div class="fixed">
-    <a href="#home">
-    <button class="btn btn-primary btn-lg" type ="buttom">Home
-      </button></a>
-    <a href="#about">
-    <button class="btn btn-primary btn-lg" type ="buttom ">About
-      </button></a>
-    <a href="#portfolio">
-    <button class="btn btn-primary btn-lg" type ="buttom">Protfolio
-      </button></a>
-    <a href="#contact">
-    <button class="btn btn-primary btn-lg" type ="buttom">Contact
-      </button></a>
-  </div>-->
+
   <div class="container">
     <nav class="navbar navbar-inverse navbar-fixed-top bar">
         <ul class="nav navbar-nav navbar-right">
@@ -116,5 +103,5 @@
   </div>
 
 </body>
-</html>
+</html>-->
 
