--- a/weather.html
+++ b/weather.html
@@ -21,7 +21,7 @@ RawBlameHistory     36 lines (33 sloc)  790 Bytes
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/weather.css" >
-    <script src="js/weather.js"></script>
+    <script type="text/javascript" src="js/weather.js"></script>
   </head>
 <body class = "container">
 <div class="upper">
