--- a/weather.html
+++ b/weather.html
@@ -22,6 +22,8 @@ RawBlameHistory     36 lines (33 sloc)  790 Bytes
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/weather.css" >
     <script type="text/javascript" src="js/weather.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body class = "container">
 <div class="upper">
