--- a/weather.html
+++ b/weather.html
@@ -20,7 +20,7 @@ RawBlameHistory     36 lines (33 sloc)  790 Bytes
     <title>Weather by Haoran Su</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <!--<link rel="stylesheet" type="text/css" href="css/weather.css" >-->
+    <link rel="stylesheet" type="text/css" href="css/weather.css" >
     <script type="text/javascript" src="js/weather.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
      <link rel="stylesheet" <meta name="viewport" content="width=device-width, initial-scale=1">
