--- a/weather.html
+++ b/weather.html
@@ -25,6 +25,10 @@ RawBlameHistory     36 lines (33 sloc)  790 Bytes
     <link rel="stylesheet" <meta name="viewport" content="width=device-width, initial-scale=1">
      
   </head>
+   <script src="js/weather.js"></script>
+   <script type="text/javascript" src="js/weather.js"></script>
+   
+   <script type="text/javascript">
 <body class = "container">
 <div class="upper">
   <h1 class ="title">
