--- a/weather.html
+++ b/weather.html
@@ -8,9 +8,11 @@
     <script type="text/javascript" src="js/weather.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet" <meta name="viewport" content="width=device-width, initial-scale=1">
-     
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/weather.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
   </head>
-<script src="js/weather.js"></script>
+
 
 <body class = "container">
 <div class="upper">
