--- a/wiki.html
+++ b/wiki.html
@@ -3,6 +3,9 @@
 <head>
     
     <title>Wiki by Haoran Su</title>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/quote.css" >
     <link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/wiki.css" >
     <script src="js/wiki.js"></script>
